[gd_scene load_steps=8 format=2]

[ext_resource path="res://intro_message.gd" type="Script" id=1]
[ext_resource path="res://audio_resources/intro/welcome.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio_resources/intro/great_day.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio_resources/intro/out_and_about.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio_resources/intro/up_to_you.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio_resources/intro/your_guide.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio_resources/intro/lets_take_a_look.ogg" type="AudioStream" id=7]

[node name="intro_message" type="Node2D"]
script = ExtResource( 1 )

[node name="audio_welcome" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="audio_great_day" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="audio_out_and_about" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="audio_up_to_you" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="audio_your_guide" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="audio_lets_take_a_look" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="finished" from="audio_welcome" to="." method="_on_audio_finished"]
[connection signal="finished" from="audio_great_day" to="." method="_on_audio_finished"]
[connection signal="finished" from="audio_out_and_about" to="." method="_on_audio_finished"]
[connection signal="finished" from="audio_up_to_you" to="." method="_on_audio_finished"]
[connection signal="finished" from="audio_your_guide" to="." method="_on_audio_finished"]
[connection signal="finished" from="audio_lets_take_a_look" to="." method="_on_audio_finished"]
